--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/supabase": "^0.3.4-beta.0",
     "nuxt": "3.0.0-rc.12"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "tailwindcss": "^3.2.4",
     "vue-chart-3": "^3.1.8",
     "vue-chartjs": "^4.1.2",
-    "vue-css-donut-chart": "^1.3.2"
+    "vue-css-donut-chart": "^1.3.2",
+    "vue3-carousel": "^0.2.14"
   }
 }
